--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 </head>
 <body>
 	<div id="webwrapper">
-		<div id="contentwrapper">
 
 			<header id="header" class="section">
 	<!--			
@@ -80,6 +79,7 @@
 							<div class="id-photo id-photo1">
 							</div>
 							<div class="lateam-desc">
+								<h3>Ewen</h3>
 								<p>Création, réparation, formation, conciergerie, logistique événementiel, communication</p>
 							</div>
 						</article>
@@ -88,6 +88,7 @@
 							<div class="id-photo id-photo2">
 							</div>
 							<div class="lateam-desc">
+								<h3>Adèle</h3>
 								<p>Création, sponsor, coordination, logistique événementiel, communication</p>
 							</div>
 						</article>
@@ -96,6 +97,7 @@
 							<div class="id-photo id-photo3">
 							</div>
 							<div class="lateam-desc">
+								<h3>Jean-Baptiste</h3>
 								<p>Création, réparation, Formation, conciergerie, logistique événementiel, communication</p>
 							</div>
 						</article>
@@ -104,6 +106,7 @@
 							<div class="id-photo id-photo4">
 							</div>
 							<div class="lateam-desc">
+								<h3>Ganaël</h3>
 								<p>Création, réparation, Formation, conciergerie, logistique événementiel, communication</p>
 							</div>
 						</article>
@@ -112,6 +115,7 @@
 							<div class="id-photo id-photo5">
 							</div>
 							<div class="lateam-desc">
+								<h3>Tristan</h3>
 								<p>Création, réparation, Formation, conciergerie, logistique événementiel, communication</p>
 							</div>
 						</article>
@@ -120,6 +124,7 @@
 							<div class="id-photo id-photo6">
 							</div>
 							<div class="lateam-desc">
+								<h3>Nikos</h3>
 								<p>Création, conciergerie, logistique événementiel, communication, Pro/Sponsor</p>
 							</div>
 						</article>
@@ -128,6 +133,7 @@
 							<div class="id-photo id-photo7">
 							</div>
 							<div class="lateam-desc">
+								<h3>Yannick</h3>
 								<p>Création, Formation, conciergerie, logistique événementiel, communication</p>
 							</div>
 						</article>
@@ -136,6 +142,7 @@
 							<div class="id-photo id-photo8">
 							</div>
 							<div class="lateam-desc">
+								<h3>Philippe</h3>
 								<p>Création, réparation, Formation, logistique événementiel, communication</p>
 							</div>
 						</article>
@@ -200,7 +207,6 @@
 				
 			</footer>
 
-		</div>
 	</div>
 
 	<script src="cargolonie.js"></script>
